. [NEW] Actions: Added the possibility to create a CCSpawn and CCSequence with an NSArray
. [NEW] CCArray: Added exchangeObject & exchangeObjectAtIndex (issue #1085)
. [NEW] Templates: Added Xcode4 templates for cocos2d, cocos2d+box2d, cocos2d+chipmunk both for iOS and Mac OS X
. [NEW] Templates: Possibility to run the installer from any directory
. [NEW] Tests: Added DirectorTest
. [NEW] TextureAtlas: added possibility to draw the quads in parts
. [FIX] All: Removed many deprecated methods and classes that were scheduled for removal on v1.0
. [FIX] Actions: Instant, "base" actions, ReverseTime, Spawn and Sequence don't leak memory if actions are reused
. [FIX] ccpLineIntersect: doesn't produce false positives for collisions (issue #962)
. [FIX] Director: convertToUI works OK in RetinaDisplay mode
. [FIX] Documentation: Drawing primitives fixed syntax error (issue #1127)
. [FIX] Documentation: onExit doxystring improved (issue #1135)
. [FIX] MenuItemToggle: Don't scale up if it is pressed several times (issue #948)
. [FIX] ProgressTimer: fixed underflow in setPercentage() (issue #1123)
. [FIX] RenderTexture: Don't enable default GL states. It's not its responsibility (issue #1145)
. [FIX] Templates: Don't generate analyze warnings in Xcode4 (issue #1142)
. [FIX] Xcode: TexturePVR compiles when using cocos2d as an external library (issue #1132)
. [FIX] Xcode: Added SKIP_INSTALL=YES in libraries for Xcode4 (issue #1137)
. [FIX-MAC] All: Code is 64-bit friendly. No more warnings when casting from 64 to 32 bits
. [FIX-MAC] Director: Compiles in Mac when "slow" FPS are selected (issue #1126)
. [FIX-MAC] Director: Fullscreen reuses the OpenGL view.
. [3RD] FontLabel: Fixes issues with wrapping and apostraphes and hyphens (issue #1124)
. [3RD] TouchJSON: Updated to "master" from March, 5 2011 (issue #1128)
. [3RD] uthash / utlist: Updated to version 1.9.3

version 1.0-beta - 01-Mar-2011